compiler/antlr/ImgLangParser.py
# Generated from ImgLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ImgLangParser ( Parser ):

    grammarFileName = "ImgLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'proc'", "'struct'", "'value'", "'result'", 
                     "'image'", "'int'", "'float'", "'color'", "'pixel'", 
                     "'bool'", "'string'", "'for'", "'if'", "'else'", "'true'", 
                     "'false'", "'then'", "'begin'", "'end'", "'while'", 
                     "'do'", "'until'", "'public'", "'protected'", "'private'", 
                     "'return'", "'this'", "'super'", "'virtual'", "'override'", 
                     "'new'", "'extends'", "'load_image'", "'save_image'", 
                     "'create_image'", "'get_width'", "'get_height'", "'get_pixel'", 
                     "'set_pixel'", "'to_color'", "'clamp'", "'write'", 
                     "'read_int'", "'read_float'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
                     "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", 
                     "'||'", "'**'", "'!'", "'('", "')'", "'{'", "'}'", 
                     "','", "';'", "'.'", "'->'" ]

    symbolicNames = [ "<INVALID>", "PROC", "STRUCT", "VALUE", "RESULT", 
                      "IMAGE", "INT_TYPE", "FLOAT_TYPE", "COLOR", "PIXEL", 
                      "BOOL", "STRING_TYPE", "FOR", "IF", "ELSE", "TRUE", 
                      "FALSE", "THEN", "BEGIN", "END", "WHILE", "DO", "UNTIL", 
                      "PUBLIC", "PROTECTED", "PRIVATE", "RETURN", "THIS", 
                      "SUPER", "VIRTUAL", "OVERRIDE", "NEW", "EXTENDS", 
                      "LOAD_IMAGE", "SAVE_IMAGE", "CREATE_IMAGE", "GET_WIDTH", 
                      "GET_HEIGHT", "GET_PIXEL", "SET_PIXEL", "TO_COLOR", 
                      "CLAMP", "WRITE", "READ_INT", "READ_FLOAT", "INT", 
                      "STRING", "FLOAT", "ID", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "PLUS", "MINUS", "MUL", "DIV", "MOD", "ASSIGN", "LT", 
                      "GT", "LE", "GE", "EQ", "NE", "AND", "OR", "POW", 
                      "NOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "COMMA", 
                      "SEMI", "DOT", "ARROW" ]

    RULE_program = 0
    RULE_structDecl = 1
    RULE_memberDecl = 2
    RULE_accessModifier = 3
    RULE_fieldDecl = 4
    RULE_methodDecl = 5
    RULE_functionDecl = 6
    RULE_parameterList = 7
    RULE_parameter = 8
    RULE_type = 9
    RULE_block = 10
    RULE_statement = 11
    RULE_returnStatement = 12
    RULE_superCall = 13
    RULE_whileLoop = 14
    RULE_doUntilLoop = 15
    RULE_variableDecl = 16
    RULE_variableList = 17
    RULE_variableEntry = 18
    RULE_assignment = 19
    RULE_idList = 20
    RULE_exprList = 21
    RULE_forLoop = 22
    RULE_forInit = 23
    RULE_forCondition = 24
    RULE_forUpdate = 25
    RULE_ifStatement = 26
    RULE_expression = 27
    RULE_logicalOr = 28
    RULE_logicalAnd = 29
    RULE_equality = 30
    RULE_comparison = 31
    RULE_addition = 32
    RULE_multiplication = 33
    RULE_power = 34
    RULE_unary = 35
    RULE_primary = 36
    RULE_literal = 37
    RULE_functionCall = 38
    RULE_funcName = 39
    RULE_argumentList = 40
    RULE_builtInFunction = 41

    ruleNames =  [ "program", "structDecl", "memberDecl", "accessModifier", 
                   "fieldDecl", "methodDecl", "functionDecl", "parameterList", 
                   "parameter", "type", "block", "statement", "returnStatement", 
                   "superCall", "whileLoop", "doUntilLoop", "variableDecl", 
                   "variableList", "variableEntry", "assignment", "idList", 
                   "exprList", "forLoop", "forInit", "forCondition", "forUpdate", 
                   "ifStatement", "expression", "logicalOr", "logicalAnd", 
                   "equality", "comparison", "addition", "multiplication", 
                   "power", "unary", "primary", "literal", "functionCall", 
                   "funcName", "argumentList", "builtInFunction" ]

    EOF = Token.EOF
    PROC=1
    STRUCT=2
    VALUE=3
    RESULT=4
    IMAGE=5
    INT_TYPE=6
    FLOAT_TYPE=7
    COLOR=8
    PIXEL=9
    BOOL=10
    STRING_TYPE=11
    FOR=12
    IF=13
    ELSE=14
    TRUE=15
    FALSE=16
    THEN=17
    BEGIN=18
    END=19
    WHILE=20
    DO=21
    UNTIL=22
    PUBLIC=23
    PROTECTED=24
    PRIVATE=25
    RETURN=26
    THIS=27
    SUPER=28
    VIRTUAL=29
    OVERRIDE=30
    NEW=31
    EXTENDS=32
    LOAD_IMAGE=33
    SAVE_IMAGE=34
    CREATE_IMAGE=35
    GET_WIDTH=36
    GET_HEIGHT=37
    GET_PIXEL=38
    SET_PIXEL=39
    TO_COLOR=40
    CLAMP=41
    WRITE=42
    READ_INT=43
    READ_FLOAT=44
    INT=45
    STRING=46
    FLOAT=47
    ID=48
    WS=49
    LINE_COMMENT=50
    BLOCK_COMMENT=51
    PLUS=52
    MINUS=53
    MUL=54
    DIV=55
    MOD=56
    ASSIGN=57
    LT=58
    GT=59
    LE=60
    GE=61
    EQ=62
    NE=63
    AND=64
    OR=65
    POW=66
    NOT=67
    LPAREN=68
    RPAREN=69
    LBRACE=70
    RBRACE=71
    COMMA=72
    SEMI=73
    DOT=74
    ARROW=75

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ImgLangParser.EOF, 0)

        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ImgLangParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(ImgLangParser.FunctionDeclContext,i)


        def structDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ImgLangParser.StructDeclContext)
            else:
                return self.getTypedRuleContext(ImgLangParser.StructDeclContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ImgLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(ImgLangParser.StatementContext,i)


        def getRuleIndex(self):
            return ImgLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ImgLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 9570143238733798) != 0) or _la==67 or _la==68:
                self.state = 87
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 84
                    self.functionDecl()
                    pass
                elif token in [2]:
                    self.state = 85
                    self.structDecl()
                    pass
                elif token in [5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 20, 21, 26, 27, 28, 31, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 53, 67, 68]:
                    self.state = 86
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(ImgLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(ImgLangParser.STRUCT, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ImgLangParser.ID)
            else:
                return self.getToken(ImgLangParser.ID, i)

        def LBRACE(self):
            return self.getToken(ImgLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ImgLangParser.RBRACE, 0)

        def EXTENDS(self):
            return self.getToken(ImgLangParser.EXTENDS, 0)

        def memberDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ImgLangParser.MemberDeclContext)
            else:
                return self.getTypedRuleContext(ImgLangParser.MemberDeclContext,i)


        def SEMI(self):
            return self.getToken(ImgLangParser.SEMI, 0)

        def getRuleIndex(self):
            return ImgLangParser.RULE_structDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDecl" ):
                listener.enterStructDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDecl" ):
                listener.exitStructDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDecl" ):
                return visitor.visitStructDecl(self)
            else:
                return visitor.visitChildren(self)




    def structDecl(self):

        localctx = ImgLangParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(ImgLangParser.STRUCT)
            self.state = 95
            self.match(ImgLangParser.ID)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 96
                self.match(ImgLangParser.EXTENDS)
                self.state = 97
                self.match(ImgLangParser.ID)


            self.state = 100
            self.match(ImgLangParser.LBRACE)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 58720256) != 0):
                self.state = 101
                self.memberDecl()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(ImgLangParser.RBRACE)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==73:
                self.state = 108
                self.match(ImgLangParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def accessModifier(self):
            return self.getTypedRuleContext(ImgLangParser.AccessModifierContext,0)


        def fieldDecl(self):
            return self.getTypedRuleContext(ImgLangParser.FieldDeclContext,0)


        def methodDecl(self):
            return self.getTypedRuleContext(ImgLangParser.MethodDeclContext,0)


        def getRuleIndex(self):
            return ImgLangParser.RULE_memberDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemberDecl" ):
                listener.enterMemberDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemberDecl" ):
                listener.exitMemberDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberDecl" ):
                return visitor.visitMemberDecl(self)
            else:
                return visitor.visitChildren(self)




    def memberDecl(self):

        localctx = ImgLangParser.MemberDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_memberDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.accessModifier()
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 6, 7, 8, 9, 10, 11, 48]:
                self.state = 112
                self.fieldDecl()
                pass
            elif token in [1, 29, 30]:
                self.state = 113
                self.methodDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(ImgLangParser.PUBLIC, 0)

        def PROTECTED(self):
            return self.getToken(ImgLangParser.PROTECTED, 0)

        def PRIVATE(self):
            return self.getToken(ImgLangParser.PRIVATE, 0)

        def getRuleIndex(self):
            return ImgLangParser.RULE_accessModifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccessModifier" ):
                listener.enterAccessModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccessModifier" ):
                listener.exitAccessModifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccessModifier" ):
                return visitor.visitAccessModifier(self)
            else:
                return visitor.visitChildren(self)




    def accessModifier(self):

        localctx = ImgLangParser.AccessModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_accessModifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 58720256) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ImgLangParser.TypeContext,0)


        def ID(self):
            return self.getToken(ImgLangParser.ID, 0)

        def SEMI(self):
            return self.getToken(ImgLangParser.SEMI, 0)

        def getRuleIndex(self):
            return ImgLangParser.RULE_fieldDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldDecl" ):
                listener.enterFieldDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldDecl" ):
                listener.exitFieldDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldDecl" ):
                return visitor.visitFieldDecl(self)
            else:
                return visitor.visitChildren(self)




    def fieldDecl(self):

        localctx = ImgLangParser.FieldDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fieldDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.type_()
            self.state = 119
            self.match(ImgLangParser.ID)
            self.state = 120
            self.match(ImgLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROC(self):
            return self.getToken(ImgLangParser.PROC, 0)

        def ID(self):
            return self.getToken(ImgLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(ImgLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ImgLangParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(ImgLangParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(ImgLangParser.ParameterListContext,0)


        def ARROW(self):
            return self.getToken(ImgLangParser.ARROW, 0)

        def type_(self):
            return self.getTypedRuleContext(ImgLangParser.TypeContext,0)


        def VIRTUAL(self):
            return self.getToken(ImgLangParser.VIRTUAL, 0)

        def OVERRIDE(self):
            return self.getToken(ImgLangParser.OVERRIDE, 0)

        def getRuleIndex(self):
            return ImgLangParser.RULE_methodDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDecl" ):
                listener.enterMethodDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDecl" ):
                listener.exitMethodDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDecl" ):
                return visitor.visitMethodDecl(self)
            else:
                return visitor.visitChildren(self)




    def methodDecl(self):

        localctx = ImgLangParser.MethodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29 or _la==30:
                self.state = 122
                _la = self._input.LA(1)
                if not(_la==29 or _la==30):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 125
            self.match(ImgLangParser.PROC)
            self.state = 126
            self.match(ImgLangParser.ID)
            self.state = 127
            self.match(ImgLangParser.LPAREN)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 281474976714744) != 0):
                self.state = 128
                self.parameterList()


            self.state = 131
            self.match(ImgLangParser.RPAREN)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==75:
                self.state = 132
                self.match(ImgLangParser.ARROW)
                self.state = 133
                self.type_()


            self.state = 136
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROC(self):
            return self.getToken(ImgLangParser.PROC, 0)

        def ID(self):
            return self.getToken(ImgLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(ImgLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ImgLangParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(ImgLangParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(ImgLangParser.ParameterListContext,0)


        def ARROW(self):
            return self.getToken(ImgLangParser.ARROW, 0)

        def type_(self):
            return self.getTypedRuleContext(ImgLangParser.TypeContext,0)


        def getRuleIndex(self):
            return ImgLangParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = ImgLangParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(ImgLangParser.PROC)
            self.state = 139
            self.match(ImgLangParser.ID)
            self.state = 140
            self.match(ImgLangParser.LPAREN)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 281474976714744) != 0):
                self.state = 141
                self.parameterList()


            self.state = 144
            self.match(ImgLangParser.RPAREN)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==75:
                self.state = 145
                self.match(ImgLangParser.ARROW)
                self.state = 146
                self.type_()


            self.state = 149
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ImgLangParser.ParameterContext)
            else:
                return self.getTypedRuleContext(ImgLangParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ImgLangParser.COMMA)
            else:
                return self.getToken(ImgLangParser.COMMA, i)

        def getRuleIndex(self):
            return ImgLangParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = ImgLangParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.parameter()
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==72:
                self.state = 152
                self.match(ImgLangParser.COMMA)
                self.state = 153
                self.parameter()
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(ImgLangParser.TypeContext,0)


        def ID(self):
            return self.getToken(ImgLangParser.ID, 0)

        def VALUE(self):
            return self.getToken(ImgLangParser.VALUE, 0)

        def RESULT(self):
            return self.getToken(ImgLangParser.RESULT, 0)

        def getRuleIndex(self):
            return ImgLangParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):
